--- a/src/Components/GroupPosts/GroupPost.css
+++ b/src/Components/GroupPosts/GroupPost.css
@@ -25,8 +25,12 @@
   width: 100%;
   height: 18rem;
 }
-.large-display{
-    display: none;
+.large-display {
+  display: none;
+}
+.custom-dropdown-toggle::after {
+  /* Hide the default dropdown toggle arrow */
+  display: none !important;
 }
 /* Responsive styles using media queries */
 @media (max-width: 768px) {
@@ -58,7 +62,7 @@
   .post-image {
     height: 10rem;
   }
-  .large-display{
+  .large-display {
     display: block;
-}
+  }
 }
