--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -9,28 +9,27 @@
 .eye-icon {
   position: absolute;
   top: 50%;
-  right: 10px; /* Adjust the right value as needed to move the icon inside the box */
+  right: 10px;
   transform: translateY(-50%);
   cursor: pointer;
 }
-/* NavigationBar.css */
+
 /* Custom modal dialog width */
 .custom-modal-dialog {
-    max-width: 800px; /* Set your desired width for larger screens */
+  max-width: 800px;
+}
+
+/* Media query for phones with a maximum width of 768px */
+@media (max-width: 768px) {
+  .custom-modal-dialog {
+    max-width: 100%;
+    margin: 0;
   }
-  
-  /* Media query for phones with a maximum width of 768px */
-  @media (max-width: 768px) {
-    .custom-modal-dialog {
-      max-width: 100%; /* Set 100% width for phones */
-      margin: 0; /* Remove any default margins */
-    }
-    .modal-content {
-      height: 100vh; /* Set the modal content height to 100% of the viewport height */
-    }
-    .modal-dialog {
-      height: 100vh; /* Set the modal dialog height to 100% of the viewport height */
-      margin: 0; /* Remove any default margins */
-    }
+  .modal-content {
+    height: 100vh;
   }
-  
+  .modal-dialog {
+    height: 100vh;
+    margin: 0;
+  }
+}
