--- a/src/Components/NavigationBar/NavigationBar.css
+++ b/src/Components/NavigationBar/NavigationBar.css
@@ -1,7 +1,6 @@
-/* NavigationBar.css */
-/* Custom modal dialog width */
+
 .custom-modal-dialog {
-  max-width: 800px; /* Set your desired width for larger screens */
+  max-width: 800px; 
 }
 .profile-photo{
   width: 40px;
@@ -12,14 +11,14 @@
  /* Media query for phones with a maximum width of 768px */
  @media (max-width: 768px) {
   .custom-modal-dialog {
-    max-width: 100%; /* Set 100% width for phones */
-    margin: 0; /* Remove any default margins */
+    max-width: 100%; 
+    margin: 0; 
   }
   .modal-content {
-    height: 100vh; /* Set the modal content height to 100% of the viewport height */
+    height: 100vh; 
   }
   .modal-dialog {
-    height: 100vh; /* Set the modal dialog height to 100% of the viewport height */
-    margin: 0; /* Remove any default margins */
+    height: 100vh; 
+    margin: 0; 
   }
 }
